--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -3,7 +3,7 @@
     <td><%= link_to 'Show', client_path(client), class: 'btn btn-info', data: {remote: true, bs_toggle: "modal", bs_target: "#showclient-#{client.id}"} %></td>
     <td><%= link_to 'Add Criteria', client_path(client), class: 'btn btn-secondary' %></td>
     <td><%= link_to 'Edit', edit_client_path(client),data: { remote: true , bs_toggle: "modal", bs_target: "#editclient-#{client.id}"}, class: 'btn btn-primary edit-button'%></td>
-    <td><%= link_to 'Destroy', client_path(client), method: :delete, data: { confirm: 'Are you sure, All the associates will get deleted?' } , class: 'btn btn-danger'%></td>
+    <td><%= link_to 'Destroy', client_path(client),remote: true, method: :delete, data: { confirm: 'Are you sure, All the associates will get deleted?' } , class: 'btn btn-danger'%></td>
   </tr>
 
   <!-- Edit Client Modal -->
